# pydecomp

./: .gitignore  CLAUDE.md  CODEGEN_FIXES_SUMMARY.md  FINAL_SUMMARY.md  README.md  USAGE_GUIDE.md  binary_disassembler.py  build_system.py  code_editor.py  code_generator.py  complete_demo.py  complete_disassembler.py  control_flow_analyzer.py  demo_fixes.py  demo_gui.py  enhanced_code_generator.py  enhanced_disassembler.py  enhanced_pattern_analyzer.py  gui_analyzer.py  gui_main.py  gui_target_hook.py  linux_compat_test  linux_compat_test.cpp  pattern_analyzer.py  perfect_c_generator.py  project_manager.py  pydecomp_cli.py  pyproject.toml  requirements.txt  run_gui.py  settings_manager.py  setup.bat  test_dll.c
amsi_perfect_fixed/: amsi_complete.cpp  amsi_complete.h  amsi_complete_analysis.txt  amsi_function_analysis.json  amsi_perfect.c  amsi_perfect.h
complex_shell_analysis/: CMakeLists.txt  Makefile  complex_shell.cpp  complex_shell.h  complex_shell_analysis_report.txt  complex_shell_perfect.c  complex_shell_perfect.h  complex_shell_summary.json
gui_complex_test/: complex_meterpreter_analysis_report.txt  complex_meterpreter_summary.json
meterpreter_analysis/: CMakeLists.txt  Makefile  complex_meterpreter.cpp  complex_meterpreter.h  complex_meterpreter_analysis_report.txt  complex_meterpreter_perfect.c  complex_meterpreter_perfect.h  complex_meterpreter_summary.json
powershell_analysis/: CMakeLists.txt  Makefile  powershell_exec.cpp  powershell_exec.h  powershell_exec_analysis_report.txt  powershell_exec_perfect.c  powershell_exec_perfect.h  powershell_exec_summary.json
test_binaries/: demo_test.c  linux_test.c
tests/: test_enhanced_disassembler.py
